--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbo",
+		"dev": "next dev",
 		"build": "next build"
 	},
 	"dependencies": {
+		"@heroui/react": "^2.8.5",
+		"@tailwindcss/postcss": "^4.1.16",
+		"framer-motion": "^12.23.24",
 		"next": "^15.1.7",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
@@ -13,6 +16,9 @@
 		"@types/node": "^22.13.4",
 		"@types/react": "^19.0.8",
 		"@types/react-dom": "^19.0.3",
+		"autoprefixer": "^10.4.21",
+		"postcss": "^8.5.6",
+		"tailwindcss": "^4.1.16",
 		"typescript": "^5.7.3"
 	}
 }
